Fix layout bugs.

--- a/less/pmp.less
+++ b/less/pmp.less
@@ -415,6 +415,9 @@
     .media-md({
       top: 40%;
     });
+    .media-lg({
+      top: 50%;
+    });
 
     .title {
       padding-bottom: 1rem;
